Detach the output surface if bind fails.

This destroys the compositor context provider on the correct thread.

R=enne, piman
BUG=608946
CQ_INCLUDE_TRYBOTS=tryserver.blink:linux_blink_rel

Review-Url: https://codereview.chromium.org/1949753007
Cr-Commit-Position: refs/heads/master@{#392168}

Former-commit-id: cbd17b97df7b1d54eae6ceb1a4d5a75d60d61245